Added some customization
(cherry picked from commit d14b6b23ff7ee28ac8136856d1349ce4cc81a70c)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 custom/zsh
-
 vim/backups
 vim/view
 *un~
@@ -11,6 +10,7 @@ vim/.vundles.local
 vim/.vundles.local.bak
 vim/bundle
 vim/sessions
+zsh/custom_aliases_private.zsh
 .netrwhist
 bin/subl
 tags
