--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,3 +85,13 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
+
+# vim-friendly copy-mode bindings
+# from http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
