--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -99,3 +99,9 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# vim-friendly pane-switching
+# from https://gist.github.com/spicycode/1229612
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
