--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,6 +67,16 @@ unbind C-b
 set -g prefix C-a
 bind a send-prefix
 
+# vim
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # No escape time for vi mode
 set -sg escape-time 0
 
@@ -86,6 +96,3 @@ set -g assume-paste-time 0
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Local config
-if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
